<resources>
    <string name="app_name">My Application</string>
    <string name="error_user">Неправильно введен токен</string>
    <string name="state_network">Проверьте соединение с интернетом</string>
    <string name="empty_token">Вам нужно ввести свой токен</string>
    <string name="instruction">
        \n
        1. Регистрируемся в YouTrack\n\n
        2. Заходим в свой профиль\n\n
        3. Находим пункт "Безопасность аккаунта"\n\n
        4. Листаем вниз и находим "Токены"\n\n
        5. Нажимаем на кнопку "новый токен"\n\n
        6. Выбираем имя и область доступа\n\n
        7. Копируем и сохраняем в каком-нибудь файле\n\n
        8. Вставляем в логин и нажимаем "Войти"\n\n
    </string>
    <string name="in_progress">В обработке</string>
    <string name="open">Открыта</string>
    <string name="fixed">Исправлена</string>
    <string name="pause">В паузе</string>
    <string name="stopped">Завершена</string>
    <string name="notification_content_text">Задача в работе</string>
    <string name="look_all">Смотреть все</string>
    <string name="today">Сегодня</string>
    <string name="all_tasks">Все задачи</string>
    <string name="view_today_tasks">На сегодня</string>
    <string name="click_to_start">Запустить</string>
    <string name="click_to_pause">Пауза</string>
    <string name="click_to_stop">Завершить</string>
    <string name="click_to_resume">Возобновить</string>
    <string name="bottom_description_task">Описание задачи</string>
    <string name="empty_description">У этой задачи пока нет описания.</string>
    <string name="no_project">Нет проекта</string>
    <string name="statistics">Статистика</string>
    <string name="tasks_completed">Задач завершено</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="time_spent">Время затрачено</string>
    <string name="error_loading">Ошибка загрузки. Нажмите, чтобы повторить.\n</string>
    <string name="empty_list_history">У вас еще нет записей истории. \n</string>
    <string name="confirm">Подтверждение</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="are_you_sure_you_want_to_cleanse">Вы уверены, что хотите очистить?</string>

    <string-array name="week_labels">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>

    <string-array name="day_labels">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>

    <string-array name="default_hours_labels">
        <item>0ч0м</item>
        <item>0ч30м</item>
        <item>1ч0м</item>
        <item>1ч30м</item>
        <item>2ч0м</item>
        <item>2ч30м</item>
    </string-array>
</resources>