<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/statistics"
        android:textColor="#070417"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_button" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="164dp"
        android:layout_height="132dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_statistics_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/complete_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/rubik"
            android:maxWidth="88dp"
            android:text="@string/tasks_completed"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/tasks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="164dp"
        android:layout_height="132dp"

        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_statistics_data"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/time_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/statistics_time_completed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/rubik"
            android:maxWidth="88dp"
            android:text="@string/time_spent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/time_completed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/time_completed"
            app:layout_constraintTop_toTopOf="@+id/time_completed" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="32sp"
            android:text=""
            android:textColor="@color/light_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/time_completed"
            app:layout_constraintTop_toBottomOf="@+id/time_completed" />

        <TextView
            android:id="@+id/hours_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ч"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/hours"
            app:layout_constraintStart_toEndOf="@+id/hours"
            app:layout_constraintTop_toTopOf="@+id/hours" />


        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/rubik_medium"
            android:text=""
            android:textColor="@color/light_black"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/hours"
            app:layout_constraintStart_toEndOf="@+id/hours_text"
            app:layout_constraintTop_toTopOf="@+id/hours" />


        <TextView
            android:id="@+id/minutes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="м"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/hours_text"
            app:layout_constraintStart_toEndOf="@+id/minutes"
            app:layout_constraintTop_toTopOf="@+id/hours_text"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="279dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/background_statistics_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/day"
            android:layout_width="132dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/rubik"
            android:outlineSpotShadowColor="@color/white"
            android:text="@string/day"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/week"
            android:layout_width="132dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/rubik"
            android:outlineSpotShadowColor="@color/white"
            android:text="@string/week"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


        <com.example.omegatracker.ui.statistics.StatisticsGraph
            android:id="@+id/statistic_graph"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
            app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>